syntax ="proto3";
package endorsementpb;

import "proto/types/blockchain.proto";
import "proto/types/endorsement.proto";

option go_package = "github.com/iotexproject/iotex-core/consensus/scheme/rolldpos/endorsementpb";


message endorserEndorsementCollection{
	string endorser = 1;
	repeated uint32 topics = 2;
	repeated iotextypes.Endorsement endorsements = 3;
}

message blockEndorsementCollection{
	iotextypes.Block blk = 1;
	repeated endorserEndorsementCollection blockMap = 2;
}

message endorsementManager{
	repeated string blkHash = 1;
	repeated blockEndorsementCollection blockEndorsements = 2;
}
